[package]
name = "hearth"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.15", features = ["transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
toml = "0.8"
aes = "0.8"
ecb = "0.1"
crc32fast = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
